Closed
Bug 370230
Opened 19 years ago
Closed 19 years ago
bug 18333 broke --enable-perf-metrics builds
Categories
(Core :: XML, defect)
Core
XML
Tracking
()
RESOLVED
FIXED
People
(Reporter: MatsPalmgren_bugz, Assigned: sicking)
References
Details
(Keywords: regression)
Attachments
(2 files, 2 obsolete files)
|
4.81 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
|
3.54 KB,
patch
|
sicking
:
review+
benjamin
:
superreview+
|
Details | Diff | Splinter Review |
STEPS TO REPRODUCE
1. add "ac_add_options --enable-perf-metrics" to your .mozconfig
2. build
ACTUAL RESULT
nsContentSink.cpp:988: error: ‘mWatch’ was not declared in this scope
mWatch is used but never declared AFAICT
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/content/base/src/nsContentSink.cpp&rev=1.60&root=/cvsroot&mark=972,973,979,988,1023#961
Flags: blocking1.9?
| Assignee | ||
Comment 1•19 years ago
|
||
I'll start a build once my CPU frees up to see if this does it.
Assignee: xml → jonas
Status: NEW → ASSIGNED
| Reporter | ||
Comment 2•19 years ago
|
||
FYI, you'll need this too to find nsTimer.h
| Assignee | ||
Comment 3•19 years ago
|
||
Yup, those two patches together builds fine with --enable-perf-metrics. Attaching combined patch for easier review.
Attachment #254889 -
Attachment is obsolete: true
Attachment #254890 -
Attachment is obsolete: true
Attachment #254972 -
Flags: superreview?(jst)
Attachment #254972 -
Flags: review?(jst)
Updated•19 years ago
|
Attachment #254972 -
Flags: superreview?(jst)
Attachment #254972 -
Flags: superreview+
Attachment #254972 -
Flags: review?(jst)
Attachment #254972 -
Flags: review+
| Reporter | ||
Comment 4•19 years ago
|
||
Comment on attachment 254972 [details] [diff] [review]
that'll do it
This patch was checked in (by Jonas) at 2007-02-13 13:18 PST.
| Reporter | ||
Comment 5•19 years ago
|
||
Building a clean tree with -enable-perf-metrics still fails though:
make[5]: Entering directory `/usr/moz/opt-ff/mozilla/parser/htmlparser/src'
make[5]: *** No rule to make target `-lmozutil_s', needed by `libhtmlpars.so'. Stop.
make[5]: Leaving directory `/usr/moz/opt-ff/mozilla/parser/htmlparser/src'
make[4]: *** [libs] Error 2
make[4]: Leaving directory `/usr/moz/opt-ff/mozilla/parser/htmlparser'
make[3]: *** [libs_tier_gecko] Error 2
A regression from bug 78081 perhaps?
| Reporter | ||
Comment 6•19 years ago
|
||
This makes my --enable-perf-metrics tree build again.
Not sure if this is the correct way of doing it though...
Attachment #256784 -
Flags: superreview?(jonas)
Attachment #256784 -
Flags: review?(jonas)
| Assignee | ||
Updated•19 years ago
|
Attachment #256784 -
Flags: superreview?(jonas)
Attachment #256784 -
Flags: superreview+
Attachment #256784 -
Flags: review?(jonas)
Attachment #256784 -
Flags: review+
| Assignee | ||
Comment 7•19 years ago
|
||
Not a blocker since this is just a testing tool
Flags: blocking1.9? → blocking1.9-
| Assignee | ||
Updated•19 years ago
|
Attachment #256784 -
Flags: superreview+ → superreview?(benjamin)
Updated•19 years ago
|
Attachment #256784 -
Flags: superreview?(benjamin) → superreview+
| Reporter | ||
Comment 8•19 years ago
|
||
Comment on attachment 256784 [details] [diff] [review]
More fixes...
Checked in to trunk at 2007-03-14 09:44 PST
| Reporter | ||
Comment 9•19 years ago
|
||
-> FIXED
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•