Bug 370230: unbreak --enable-perf-metrics. Patch by me and Mats Palmgren. r/sr=jst